--- a/templates/home.html
+++ b/templates/home.html
@@ -40,6 +40,20 @@
         </div>
         <div class="tick" style="display: none;">✔️</div>
     </div>
+    <div onclick="toggleTick(this)" class="gallery" data-exercise="LATERAL RISE">
+        <img src="{{ url_for('static', filename='images/LateralRise.png') }}" alt="LATERAL RISE" width="600" height="400">
+        <div class="overlay">
+            <div class="text">LATERAL RISE</div>
+        </div>
+        <div class="tick" style="display: none;">✔️</div>
+    </div>
+    <div onclick="toggleTick(this)" class="gallery" data-exercise="LEG EXTENSION">
+        <img src="{{ url_for('static', filename='images/LegExtension.png') }}" alt="Leg Extension" width="600" height="400">
+        <div class="overlay">
+            <div class="text">LEG EXTENSION</div>
+        </div>
+        <div class="tick" style="display: none;">✔️</div>
+    </div>
 
     <div class="gallery" onclick="toggleTick(this)" data-exercise="PUSHUP">
         <img src="{{ url_for('static', filename='images/pushup.png') }}" alt="Pushup" width="600" height="400">
